--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <!-- Java 设计模式的练习 -->
         <module>design-patterns</module>
+        <module>java-basis-common</module>
     </modules>
 
 
