通过 Javassist 获取类型信息

--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,17 @@
         <!-- Java 设计模式的练习 -->
         <module>design-patterns</module>
         <module>java-basis-common</module>
+        <module>dynamic-proxy</module>
     </modules>
 
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
     <build>
         <plugins>
