--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>design-patterns</module>
         <module>java-basis-common</module>
         <module>dynamic-proxy</module>
+        <module>reflection-example</module>
     </modules>
 
     <dependencies>
