--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <java.version>1.8</java.version>
         <junit.version>4.12</junit.version>
         <lombok.version>1.16.18</lombok.version>
+        <guava.version>22.0</guava.version>
     </properties>
 
     <modules>
@@ -31,6 +32,12 @@
             <artifactId>junit</artifactId>
             <version>${junit.version}</version>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>${guava.version}</version>
         </dependency>
 
         <dependency>
