--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <easymock.version>3.4</easymock.version>
         <lombok.version>1.16.18</lombok.version>
         <guava.version>22.0</guava.version>
+        <fastjson.version>1.2.43</fastjson.version>
     </properties>
 
     <modules>
@@ -34,6 +35,7 @@
         <module>java-spi</module>
         <module>java-junit-easymock</module>
         <module>data-struct</module>
+        <module>fastjson-example</module>
     </modules>
 
     <dependencies>
@@ -64,6 +66,12 @@
             <scope>test</scope>
         </dependency>
 
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>${fastjson.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
