dubbo 参数校验注解

--- a/fastjson-example/pom.xml
+++ b/fastjson-example/pom.xml
@@ -13,5 +13,18 @@
     <artifactId>fastjson-example</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <dependencies>
+        <!-- 参数验证 -->
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>1.0.0.GA</version>
+        </dependency>
 
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>4.2.0.Final</version>
+        </dependency>
+    </dependencies>
 </project>
