--- a/rpc-server/pom.xml
+++ b/rpc-server/pom.xml
@@ -38,6 +38,12 @@
             <artifactId>curator-recipes</artifactId>
             <version>4.0.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.javassist</groupId>
+            <artifactId>javassist</artifactId>
+            <version>3.21.0-GA</version>
+        </dependency>
     </dependencies>
 
     <build>
