--- a/java-jdbc-example/pom.xml
+++ b/java-jdbc-example/pom.xml
@@ -9,8 +9,17 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.luobosi.queue</groupId>
-    <artifactId>java-delay-queue</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    
+    <artifactId>java-jdbc-example</artifactId>
+
+
+    <dependencies>
+        <!--mysql-->
+        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.13</version>
+        </dependency>
+    </dependencies>
+
 </project>
