--- a/java-net-example/pom.xml
+++ b/java-net-example/pom.xml
@@ -14,4 +14,14 @@
     <version>1.0-SNAPSHOT</version>
 
 
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/io.netty/netty-all -->
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.6.Final</version>
+        </dependency>
+
+    </dependencies>
+
 </project>
