--- a/java-net-example/pom.xml
+++ b/java-net-example/pom.xml
@@ -22,6 +22,14 @@
             <version>4.1.6.Final</version>
         </dependency>
 
+
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.8.1</version>
+        </dependency>
+
     </dependencies>
 
 </project>
